@@ -97,6 +97,7 @@ class Albums extends \XoopsObject
         /** @var \XoopsModules\Wggallery\Helper $helper */
         $helper        = \XoopsModules\Wggallery\Helper::getInstance();
         $albumsHandler = $helper->getHandler('Albums');
+        $permissionsHandler = $helper->getHandler('Permissions');
         if (!$action) {
             $action = $_SERVER['REQUEST_URI'];
         }
@@ -109,32 +110,38 @@ class Albums extends \XoopsObject
         // Form Text AlbName
         $form->addElement(new \XoopsFormText(_CO_WGGALLERY_ALBUM_NAME, 'alb_name', 50, 255, $this->getVar('alb_name')), true);
         // Form Select Parent Album
-        $albumsHandler      = $helper->getHandler('Albums');
-        $permissionsHandler = $helper->getHandler('Permissions');
-        $criteria           = new \CriteriaCompo();
-        $criteria->add(new \Criteria('alb_id', $this->getVar('alb_id'), '<>'));
-        $criteria->setSort('alb_weight ASC, alb_date');
-        $criteria->setOrder('DESC');
-        $albPid = new \XoopsFormSelect(_CO_WGGALLERY_ALBUM_PID, 'alb_pid', $this->getVar('alb_pid'));
-        $albPid->addOption(0, '&nbsp;');
-        $albumsAll = $albumsHandler->getAll($criteria);
-        foreach (array_keys($albumsAll) as $i) {
-            if ($permissionsHandler->permAlbumEdit($albumsAll[$i]->getVar('alb_id'), $albumsAll[$i]->getVar('alb_submitter'))) {
-                $albName   = $albumsAll[$i]->getVar('alb_name');
-                $albAlbPid = $albumsAll[$i]->getVar('alb_pid');
-                if ($albAlbPid > 0) {
-                    $albumsObj = $albumsHandler->get($albAlbPid);
-                    if (is_object($albumsObj)) {
-                        $albName .= ' (' . $albumsObj->getVar('alb_name') . ')';
-                    } else {
-                        $albName .= ' (' . _CO_WGGALLERY_FORM_ERROR_ALBPID . ')';
+        $albPid = $this->isNew() ? '0' : $this->getVar('alb_pid');
+        if ($permissionsHandler->permGlobalUseCollections()) {
+            $albumsHandler = $helper->getHandler('Albums');
+            $permissionsHandler = $helper->getHandler('Permissions');
+            $criteria = new \CriteriaCompo();
+            $criteria->add(new \Criteria('alb_id', $this->getVar('alb_id'), '<>'));
+            $criteria->setSort('alb_weight ASC, alb_date');
+            $criteria->setOrder('DESC');
+            $albPid = new \XoopsFormSelect(_CO_WGGALLERY_ALBUM_PID, 'alb_pid', $albPid);
+            $albPid->addOption(0, '&nbsp;');
+            $albumsAll = $albumsHandler->getAll($criteria);
+            foreach (array_keys($albumsAll) as $i) {
+                if ($permissionsHandler->permAlbumEdit($albumsAll[$i]->getVar('alb_id'), $albumsAll[$i]->getVar('alb_submitter'))) {
+                    $albName = $albumsAll[$i]->getVar('alb_name');
+                    $albAlbPid = $albumsAll[$i]->getVar('alb_pid');
+                    if ($albAlbPid > 0) {
+                        $albumsObj = $albumsHandler->get($albAlbPid);
+                        if (is_object($albumsObj)) {
+                            $albName .= ' (' . $albumsObj->getVar('alb_name') . ')';
+                        } else {
+                            $albName .= ' (' . _CO_WGGALLERY_FORM_ERROR_ALBPID . ')';
+                        }
                     }
+                    $albPid->addOption($albumsAll[$i]->getVar('alb_id'), $albName);
                 }
-                $albPid->addOption($albumsAll[$i]->getVar('alb_id'), $albName);
             }
+            $form->addElement($albPid);
+            unset($criteria);
+        } else {
+            $form->addElement(new \XoopsFormHidden('alb_pid', $albPid));
         }
-        $form->addElement($albPid);
-        unset($criteria);
+
         // Form editor AlbDesc
         $editorConfigs           = [];
         $editorConfigs['name']   = 'alb_desc';
